finished basic profile flow
