# server/controllers/userController.js
@@ -8,5 +8,36 @@ exports.getProfile = async (req, res) => {
   if (!user) {
     throw new HttpError[404]('User not found');
   }
-  res.status(200).json(user);
+  res.status(200).json({ message: 'Profile loaded successfully', data: user });
+};
+
+exports.editProfile = async (req, res) => {
+  const { firstname, lastname, avatar } = req.body;
+  let user = await User.findOneAndUpdate(
+    { email: req.email },
+    { $set: { firstname, lastname, avatar } },
+    { new: true }
+  );
+  if (!user) {
+    throw new HttpError[404]('User not found');
+  }
+  // Transform user. Enable gravatar virtual field
+  user = user.toJSON({
+    virtuals: true,
+    versionKey: false,
+    transform: (doc, ret) => {
+      delete ret.id;
+      return ret;
+    },
+  });
+  res.status(200).json({ message: 'Profile loaded successfully', data: user });
+};
+
+exports.deleteProfile = async (req, res) => {
+  const user = await User.findOneAndDelete({ email: req.email });
+  if (!user) {
+    throw new HttpError[404]('User not found');
+  }
+  res.status(200).json({ message: 'Deleted successfully' });
+  // TODO delete all related posts with this user
 };
